entrega3/k8s-componentes-entrega-3.yaml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: users
    spec:
      serviceAccountName: k8s-pubsubaccess
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/deliveryandlogistic/deliveryandlogistic-images/users:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
---
#--- SERVICE users
kind: Service
apiVersion: v1
metadata:
  name: servicio-users
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31019
#--- USERS
---
###################################
#CREDIT-CARDS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-cards
  labels:
    app: credit-cards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-cards
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: credit-cards
    spec:
      serviceAccountName: k8s-pubsubaccess
      containers:
        - name: credit-cards
          image: us-central1-docker.pkg.dev/deliveryandlogistic/deliveryandlogistic-images/credit-cards:v1.0.0
          ports:
            - containerPort: 3020
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
---
#--- SERVICE CREDIT-CARDS
kind: Service
apiVersion: v1
metadata:
  name: servicio-credit-cards
  annotations:
    cloud.google.com/backend-config: '{"default": "credit-cards-config"}'
spec:
  type: NodePort
  selector:
    app: credit-cards
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
      nodePort: 31028
#--- CREDIT-CARDS
