entrega3/k8s-true-native-deployment.yaml
#NATIVE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: native
  labels:
    app: native
spec:
  replicas: 1
  selector:
    matchLabels:
      app: native
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: native
    spec:
      containers:
        - name: native
          image: us-central1-docker.pkg.dev/deliveryandlogistic/deliveryandlogistic-images/true-native:2.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
---
#--- SERVICE native
kind: Service
apiVersion: v1
metadata:
  name: servicio-native
  annotations:
    cloud.google.com/backend-config: '{"default": "native-config"}'
spec:
  type: NodePort
  selector:
    app: native
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31027
#--- TRUE-NATIVE
---
